Fix horiz scrollbar

--- a/_sass/base/body.scss
+++ b/_sass/base/body.scss
@@ -1,3 +1,7 @@
+body {
+  overflow-x: hidden;
+}
+
 html {
   background: #fff;
 }
